--- a/java/src/main/resources/application-dev.properties
+++ b/java/src/main/resources/application-dev.properties
@@ -1,11 +1,17 @@
 spring.application.name=backend
 
 # 데이터베이스 연결 설정
-spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8&allowPublicKeyRetrieval=true
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASS}
+
+spring.data.mongodb.uri=mongodb://${MONGO_USER}:${MONGO_PASS}@${MONGO_HOST}:${MONGO_PORT}/${MONGO_DB_NAME}?authSource=admin
 
 # JPA 설정
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# 몽고디비 로그 없애기
+logging.level.org.springframework.data.mongodb=warn
+logging.level.org.mongodb.driver=warn
