--- a/java/src/main/resources/application-prod.properties
+++ b/java/src/main/resources/application-prod.properties
@@ -1,9 +1,11 @@
 spring.application.name=backend
 
 # 데이터베이스 연결 설정
-spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8&allowPublicKeyRetrieval=true
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASS}
+
+spring.data.mongodb.uri=mongodb://${MONGO_USER}:${MONGO_PASS}@${MONGO_HOST}:${MONGO_PORT}/${MONGO_DB_NAME}?authSource=admin
 
 # JPA 설정
 spring.jpa.hibernate.ddl-auto=validate
