--- a/java/build.gradle
+++ b/java/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.4.5'
 	id 'io.spring.dependency-management' version '1.1.7'
+	// id 'com.google.protobuf' version '0.9.4' // 프로토버프 플러그인
 }
 
 group = 'com.pado'
@@ -30,10 +31,19 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+	
+	// gRPC 관련
+	// implementation 'io.grpc:grpc-netty-shaded:1.60.0'
+    // implementation 'io.grpc:grpc-protobuf:1.60.0'
+    // implementation 'io.grpc:grpc-stub:1.60.0'
+    // implementation 'com.google.protobuf:protobuf-java:3.23.4'
+    // implementation 'org.lognet:grpc-spring-boot-starter:4.5.11' // Spring Boot 호환
+	
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
+	
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
@@ -43,3 +53,29 @@ tasks.named('test') {
 	useJUnitPlatform()
 	jvmArgs += ["-Djdk.attach.allowAttachSelf=true"]
 }
+
+// protobuf {
+//     protoc {
+//         artifact = 'com.google.protobuf:protoc:3.23.4'
+//     }
+//     plugins {
+//         grpc {
+//             artifact = 'io.grpc:protoc-gen-grpc-java:1.60.0'
+//         }
+//     }
+//     generateProtoTasks {
+//         all().each { task ->
+//             task.plugins {
+//                 grpc {}
+//             }
+//         }
+//     }
+// }
+
+// sourceSets {
+//     main {
+//         java {
+//             srcDirs 'src/main/java', 'build/generated/source/proto/main/java', 'build/generated/source/proto/main/grpc'
+//         }
+//     }
+// }
